--- a/app.html
+++ b/app.html
@@ -25,6 +25,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <!-- JS -->
+    <script defer src="js/app.js"></script>
     <script defer src="js/main.js"></script>
 
   </head>
@@ -69,6 +70,8 @@
               </div>
               <div class="body">
                 <h2>More Information</h2>
+
+                <!-- <div id="us-aqi-plot"></div>  -->
 
                 <table id="data-table">
                   <tr>
