--- a/app.html
+++ b/app.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <!-- JS -->
-    <script defer src="js/app.js"></script>
+    <script src="js/app.js"></script>
     <script defer src="js/main.js"></script>
 
   </head>
