--- a/diagrams.html
+++ b/diagrams.html
@@ -32,7 +32,9 @@
     <!-- Sidebar Experiement -->
 
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <a href="http://umamififty.github.io/pbl3">Home</a>
       <a href="reviews.html">Literature Reviews</a>
       <a href="weekly.html">Weekly Reports and Updates</a>
@@ -45,7 +47,7 @@
 
     <div id="main">
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Group G - Diagrams</span
+        >&#x2601; Geopath Team - Diagrams</span
       >
     </div>
 
@@ -53,7 +55,25 @@
     <div class="container">
       <div class="row">
         <div class="three column" style="margin-top: 5%">
-            <i>insert content here</i>
+          <h2>Activity Diagrams</h2>
+          <p><a href="diagrams/activity1.jpg" target = "_blank"></a>Activity Diagram 1</p>
+          <p><a href="diagrams/activity2.jpg" target = "_blank"></a>Activity Diagram 2</p>
+          <p><a href="diagrams/activity3.jpg" target = "_blank"></a>Activity Diagram 3</p>
+          <p><a href="diagrams/activity4.jpg" target = "_blank"></a>Activity Diagram 4</p>
+          <p><a href="diagrams/activity5.jpg" target = "_blank"></a>Activity Diagram 5</p>
+          <p><a href="diagrams/activity6.jpg" target = "_blank"></a>Activity Diagram 6</p>
+
+          <h2>Flow Charts</h2>
+          <p><a href="diagrams/flow1.jpg" target = "_blank"></a>Flow Chart 1</p>
+          <p><a href="diagrams/flow2.jpg" target = "_blank"></a>Flow Chart 2</p>
+          <p><a href="diagrams/flow3.jpg" target = "_blank"></a>Flow Chart 3</p>
+          <p><a href="diagrams/flow4.jpg" target = "_blank"></a>Flow Chart 4</p>
+          <p><a href="diagrams/flow5.jpg" target = "_blank"></a>Flow Chart 5</p>
+          <p><a href="diagrams/flow6.jpg" target = "_blank"></a>Flow Chart 6</p>
+
+          <h2>Use Case Diagrams</h2>
+          <p><a href="diagrams/use1.jpg" target = "_blank"></a>Use Case Diagram 1</p>
+          <p><a href="diagrams/use2.jpg" target = "_blank"></a>Use Case Diagram 2</p>
         </div>
       </div>
     </div>
