--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
   
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2601; Group G</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team</span>
   </div>
 
   <!-- Primary Page Layout -->
@@ -65,6 +65,10 @@
         <p>Our target market is the general public, especially those who are concerned about the air pollution in their location.</p>
 
         <h4>Product Features</h4>
+        <ul>
+            <li>Frequently updated air quality information</li>
+            <li>Information about the health effects of air pollution</li>
+            <li>Route planning based on air quality in regions</li>
         <p></p>
       </div>
     </div>
