why but i put text?

--- a/diagrams.html
+++ b/diagrams.html
@@ -32,9 +32,7 @@
     <!-- Sidebar Experiement -->
 
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="http://umamififty.github.io/pbl3">Home</a>
       <a href="reviews.html">Literature Reviews</a>
       <a href="weekly.html">Weekly Reports and Updates</a>
@@ -44,11 +42,9 @@
       <a href="diagrams.html">Diagrams</a>
       <a href="app.html">Application</a>
     </div>
-
+    
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Geopath Team - Diagrams</span
-      >
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team - Diagrams</span>
     </div>
 
     <!-- Primary Page Layout -->
@@ -56,24 +52,24 @@
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h2>Activity Diagrams</h2>
-          <p><a href="diagrams/activity1.jpg" target = "_blank"></a>Activity Diagram 1</p>
-          <p><a href="diagrams/activity2.jpg" target = "_blank"></a>Activity Diagram 2</p>
-          <p><a href="diagrams/activity3.jpg" target = "_blank"></a>Activity Diagram 3</p>
-          <p><a href="diagrams/activity4.jpg" target = "_blank"></a>Activity Diagram 4</p>
-          <p><a href="diagrams/activity5.jpg" target = "_blank"></a>Activity Diagram 5</p>
-          <p><a href="diagrams/activity6.jpg" target = "_blank"></a>Activity Diagram 6</p>
+          <p><a href="diagrams/activity1.jpg" target = "_blank">Activity Diagram 1</a></p>
+          <p><a href="diagrams/activity2.jpg" target = "_blank">Activity Diagram 2</a></p>
+          <p><a href="diagrams/activity3.jpg" target = "_blank">Activity Diagram 3</a></p>
+          <p><a href="diagrams/activity4.jpg" target = "_blank">Activity Diagram 4</a></p>
+          <p><a href="diagrams/activity5.jpg" target = "_blank">Activity Diagram 5</a></p>
+          <p><a href="diagrams/activity6.jpg" target = "_blank">Activity Diagram 6</a></p>
 
           <h2>Flow Charts</h2>
-          <p><a href="diagrams/flow1.jpg" target = "_blank"></a>Flow Chart 1</p>
-          <p><a href="diagrams/flow2.jpg" target = "_blank"></a>Flow Chart 2</p>
-          <p><a href="diagrams/flow3.jpg" target = "_blank"></a>Flow Chart 3</p>
-          <p><a href="diagrams/flow4.jpg" target = "_blank"></a>Flow Chart 4</p>
-          <p><a href="diagrams/flow5.jpg" target = "_blank"></a>Flow Chart 5</p>
-          <p><a href="diagrams/flow6.jpg" target = "_blank"></a>Flow Chart 6</p>
+          <p><a href="diagrams/flow1.jpg" target = "_blank">Flow Chart 1</a></p>
+          <p><a href="diagrams/flow2.jpg" target = "_blank">Flow Chart 2</a></p>
+          <p><a href="diagrams/flow3.jpg" target = "_blank">Flow Chart 3</a></p>
+          <p><a href="diagrams/flow4.jpg" target = "_blank">Flow Chart 4</a></p>
+          <p><a href="diagrams/flow5.jpg" target = "_blank">Flow Chart 5</a></p>
+          <p><a href="diagrams/flow6.jpg" target = "_blank">Flow Chart 6</a></p>
 
           <h2>Use Case Diagrams</h2>
-          <p><a href="diagrams/use1.jpg" target = "_blank"></a>Use Case Diagram 1</p>
-          <p><a href="diagrams/use2.jpg" target = "_blank"></a>Use Case Diagram 2</p>
+          <p><a href="diagrams/use1.jpg" target = "_blank">Use Case Diagram 1</a></p>
+          <p><a href="diagrams/use2.jpg" target = "_blank">Use Case Diagram 2</a></p>
         </div>
       </div>
     </div>
