--- a/weekly.html
+++ b/weekly.html
@@ -51,19 +51,40 @@
 
     <!-- Primary Page Layout -->
     <div class="container">
+
+      <div class = "row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Week 13</h4>
+          <b>July 5 2023:</b>
+          <p>
+              The team continued to work on their respective work. Ruolin and Muting continued to work on the diagrams
+              - Activity diagrams, Flow charts and Use case diagrams. Daiki continued to work on the rubric. Zhenyu and Biligsaikhan
+              worked on the front end and back end respeictively. The team also learned about the requirements of the presentation
+              and final report, and will work on it in due course.
+          </p>
+
+          <b>July 11 2023:
+            <p>
+              <i>next scheduled meeting</i>
+            </p>
+          </b>
+        </div>
+
       <div class = "row">
         <div class = "three column" style = "margin-top: 5%">
           <h4>Week 12</h4>
           <b>June 28 2023:</b>
           <p>
-            <i>insert content here</i>
+            Team continued to work on their respective work. Ruolin and Muting continued to work on the diagrams, 
+            while Bili and Zhenyu worked on their respective parts of the web application - front end implementation
+            and back end implementation. Daiki continued to work on the rubric.
           </p>
 
-          <b>July 4 2023:
+          <b>July 4 2023:</b>
             <p>
-              <i>insert content here</i>
+              Regular Team Meeting - The team worked on the project as per usual. The programmers also received the initial designs of 
+              the web application. The team also discussed the current state and future progress of the project.
             </p>
-          </b>
         </div>
       </div>
 
@@ -83,7 +104,7 @@
             Regular Team Meeting - The team discussed the progress of the project and our personal progress.
             We discussed about the diagrams and how to make it more presentable. We also discussed about
             the progress of the programming. Zhenyu will do the wireframing of the website, and Biligsaikhan will
-            look into more APIs. Daiki will continue the construction of the rubric, while Ruolin and Muting will continue
+            look into more APIs. Daiki will continue the construction of the rubric, while Ruolin and Muting will start
             working on the diagrams.
           </p>
         </div>
