--- a/app.html
+++ b/app.html
@@ -43,11 +43,9 @@
       <a href="diagrams.html">Diagrams</a>
       <a href="app.html">Application</a>
     </div>
-
+    
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Group G - Application</span
-      >
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team - App</span>
     </div>
 
     <!-- Primary Page Layout -->
