--- a/requirements.html
+++ b/requirements.html
@@ -42,11 +42,9 @@
       <a href="diagrams.html">Diagrams</a>
       <a href="app.html">Application</a>
     </div>
-
+    
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Group G - Requirements</span
-      >
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team - Requirements</span>
     </div>
 
     <!-- Primary Page Layout -->
