--- a/weekly.html
+++ b/weekly.html
@@ -42,11 +42,9 @@
       <a href="diagrams.html">Diagrams</a>
       <a href="app.html">Application</a>
     </div>
-
+    
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Group G - Weekly Reports and Updates</span
-      >
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team - Weekly Reports and Updates</span>
     </div>
 
     <!-- Primary Page Layout -->
