--- a/diagrams.html
+++ b/diagrams.html
@@ -18,6 +18,7 @@
     />
 
     <!-- CSS -->
+    <link rel="stylesheet" href="css/diagrams.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/skeleton.css" />
 
@@ -26,13 +27,28 @@
 
     <!-- JS -->
     <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
-    <script src="js/main.js"></script>
+    <script
+      defer
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      defer
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+      integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/diagrams.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <!-- Sidebar Experiement -->
 
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <a href="http://umamififty.github.io/pbl3">Home</a>
       <a href="reviews.html">Literature Reviews</a>
       <a href="weekly.html">Weekly Reports and Updates</a>
@@ -42,34 +58,111 @@
       <a href="diagrams.html">Diagrams</a>
       <a href="app.html">Application</a>
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2630; Geopath Team - Diagrams</span>
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+        >&#x2630; Geopath Team - Diagrams</span
+      >
     </div>
 
     <!-- Primary Page Layout -->
     <div class="container">
+      <h2>Activity Diagrams</h2>
       <div class="row">
-        <div class="three column" style="margin-top: 5%">
-          <h2>Activity Diagrams</h2>
-          <p><a href="diagrams/activity1.jpg" target = "_blank">Activity Diagram 1</a></p>
-          <p><a href="diagrams/activity2.jpg" target = "_blank">Activity Diagram 2</a></p>
-          <p><a href="diagrams/activity3.jpg" target = "_blank">Activity Diagram 3</a></p>
-          <p><a href="diagrams/activity4.jpg" target = "_blank">Activity Diagram 4</a></p>
-          <p><a href="diagrams/activity5.jpg" target = "_blank">Activity Diagram 5</a></p>
-          <p><a href="diagrams/activity6.jpg" target = "_blank">Activity Diagram 6</a></p>
+        <!-- <div class="three column" style="margin-top: 5%"> -->
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity1_small.jpg"
+                alt="Activity Diagram 1"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity1_large.jpg" target="_blank">Activity Diagram 1</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity2_small.jpg"
+                alt="Activity Diagram 2"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity2_large.jpg" target="_blank">Activity Diagram 2</figcaption>
+            </figure>
+          </article>
+          
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity3_small.jpg"
+                alt="Activity Diagram 3"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity3_large.jpg" target="_blank">Activity Diagram 3</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity4_small.jpg"
+                alt="Activity Diagram 4"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity4_large.jpg" target="_blank">Activity Diagram 4</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity5_small.jpg"
+                alt="Activity Diagram 5"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity5_large.jpg" target="_blank">Activity Diagram 5</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/activity6_small.jpg"
+                alt="Activity Diagram 6"
+                title="View larger image"
+              />
+              <figcaption href="diagrams/activity6_large.jpg" target="_blank">Activity Diagram 6</figcaption>
+            </figure>
+          </article>
 
           <h2>Flow Charts</h2>
-          <p><a href="diagrams/flow1.jpg" target = "_blank">Flow Chart 1</a></p>
-          <p><a href="diagrams/flow2.jpg" target = "_blank">Flow Chart 2</a></p>
-          <p><a href="diagrams/flow3.jpg" target = "_blank">Flow Chart 3</a></p>
-          <p><a href="diagrams/flow4.jpg" target = "_blank">Flow Chart 4</a></p>
-          <p><a href="diagrams/flow5.jpg" target = "_blank">Flow Chart 5</a></p>
-          <p><a href="diagrams/flow6.jpg" target = "_blank">Flow Chart 6</a></p>
+          <p><a href="diagrams/flow1.jpg" target="_blank">Flow Chart 1</a></p>
+          <p><a href="diagrams/flow2.jpg" target="_blank">Flow Chart 2</a></p>
+          <p><a href="diagrams/flow3.jpg" target="_blank">Flow Chart 3</a></p>
+          <p><a href="diagrams/flow4.jpg" target="_blank">Flow Chart 4</a></p>
+          <p><a href="diagrams/flow5.jpg" target="_blank">Flow Chart 5</a></p>
+          <p><a href="diagrams/flow6.jpg" target="_blank">Flow Chart 6</a></p>
 
           <h2>Use Case Diagrams</h2>
-          <p><a href="diagrams/use1.jpg" target = "_blank">Use Case Diagram 1</a></p>
-          <p><a href="diagrams/use2.jpg" target = "_blank">Use Case Diagram 2</a></p>
+          <p>
+            <a href="diagrams/use1.jpg" target="_blank">Use Case Diagram 1</a>
+          </p>
+          <p>
+            <a href="diagrams/use2.jpg" target="_blank">Use Case Diagram 2</a>
+          </p>
         </div>
       </div>
     </div>
