--- a/diagrams.html
+++ b/diagrams.html
@@ -149,20 +149,140 @@
           </article>
 
           <h2>Flow Charts</h2>
-          <p><a href="diagrams/flow1.jpg" target="_blank">Flow Chart 1</a></p>
-          <p><a href="diagrams/flow2.jpg" target="_blank">Flow Chart 2</a></p>
-          <p><a href="diagrams/flow3.jpg" target="_blank">Flow Chart 3</a></p>
-          <p><a href="diagrams/flow4.jpg" target="_blank">Flow Chart 4</a></p>
-          <p><a href="diagrams/flow5.jpg" target="_blank">Flow Chart 5</a></p>
-          <p><a href="diagrams/flow6.jpg" target="_blank">Flow Chart 6</a></p>
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow1_small.jpg"
+                alt="Flow Chart 1"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 1</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow2_small.jpg"
+                alt="Flow Chart 2"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 2</figcaption>
+            </figure>
+          </article>
+
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow3_small.jpg"
+                alt="Flow Chart 3"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 3</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow4_small.jpg"
+                alt="Flow Chart 4"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 4</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow5_small.jpg"
+                alt="Flow Chart 5"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 5</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/flow6_small.jpg"
+                alt="Flow Chart 6"
+                title="View larger image"
+              />
+              <figcaption>Flow Chart 6</figcaption>
+            </figure>
+          </article>
 
           <h2>Use Case Diagrams</h2>
-          <p>
-            <a href="diagrams/use1.jpg" target="_blank">Use Case Diagram 1</a>
-          </p>
-          <p>
-            <a href="diagrams/use2.jpg" target="_blank">Use Case Diagram 2</a>
-          </p>
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/use1_small.jpg"
+                alt="Use Case Diagram 1"
+                title="View larger image"
+              />
+              <figcaption>Use Case Diagram 1</figcaption>
+            </figure>
+          </article>
+
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/use2_small.jpg"
+                alt="Use Case Diagram 2"
+                title="View larger image"
+              />
+              <figcaption>Use Case Diagram 2</figcaption>
+            </figure>
+          </article>
+
+          <h2>Architectual Diagrams</h2>
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/arch1_small.jpg"
+                alt="Architectual Diagram 1"
+                title="View larger image"
+              />
+              <figcaption>Architectual Diagram 1</figcaption>
+            </figure>
+          </article>
+
+          <h2>State Diagrams</h2>
+          <article class="col-sm">
+            <figure>
+              <img
+                img
+                class="image-thumbnail"
+                src="diagrams/state1_small.jpg"
+                alt="State Diagram 1"
+                title="View larger image"
+              />
+              <figcaption>State Diagram 1</figcaption>
+            </figure>
+          </article>
+
         </div>
       </div>
     </div>
