--- a/app.html
+++ b/app.html
@@ -62,12 +62,12 @@
       <h4 id="Temperature">Temperature: 0</h4> -->
     </div>
     <div class="container">
-      <div id="route-info"></div>
-      <!-- Top left distance duration value -->
       <div id="air-info"></div>
       <!-- Top left air quality  value-->
       <div id="temp-div"></div>
       <!-- Top left temprature value-->
+      <div id="route-info"></div>
+      <!-- Top left distance duration value -->
       <div id="pre-existing-illnesses">
         <!-- Top left 3rd drop down menu options -->
         <label for="illnesses-dropdown">Pre-existing Illnesses:</label>
@@ -84,9 +84,9 @@
       <div id="map"></div>
     </div>
 
-    <div class = "container">
+    <!-- <div class = "container">
       <div id="us-aqi-plot"></div>
-    </div>
+    </div> -->
 
     <div class="container">
       <button class="show-modal">More Information</button>
