--- a/app.html
+++ b/app.html
@@ -132,7 +132,8 @@
             </div>
           </div> 
             <div class="container" style="margin-top: 450px;">
-              <table id = "data-tablex" style = "margin-top: 10%">
+              <p2 id = "px">Main particulate matter: PM2.5 particles are small enough to enter the bloodstream, usually originating from wildfires, chimneys, bacteria, or small dust particles.</p2>
+              <table id = "data-tablex" style = "margin-top: 5%">
                 <tr>
                   <th>Category and Colour</th>
                   <th>Range</th>
