--- a/app.html
+++ b/app.html
@@ -96,44 +96,10 @@
             <div class="drag-icon"><span></span></div>
           </div>
           <div class="body">
-            <h2>More Information</h2>
-            <div class="float-container">
-              <div class = "float-child">
-                <table id="data-table">
-                  <tr>
-                    <th> - </th>
-                    <th>Today</th>
-                    <th>Next 7 Days</th>
-                  </tr>
-                  <tr>
-                    <td>Destination - Worst AQ</td>
-                    <td>Row 1, Cell 2</td>
-                    <td>Row 1, Cell 3</td>
-                  </tr>
-                  <tr>
-                    <td>Destination - Best AQ</td>
-                    <td>Row 2, Cell 2</td>
-                    <td>Row 2, Cell 3</td>
-                  </tr>
-                  </tr>
-                </table>
-              </div>  
-          </div>
-          <div class="container">
-            <div id="graph-type">
-              <label for="graph-dropdown">Graph types:</label>
-              <select id="graph-dropdown" onchange="onGraphChange()">
-                <option value="AQI">AQI</option>
-                <option value="Components">Components</option>
-              </select>
-            </div>
-            <div class = "container">
-              <div id="us-aqi-plot"></div>
-            </div>
-          </div> 
-            <div class="container" style="margin-top: 450px;">
-              <p2 id = "px">Main particulate matter: PM2.5 particles are small enough to enter the bloodstream, usually originating from wildfires, chimneys, bacteria, or small dust particles.</p2>
-              <table id = "data-tablex" style = "margin-top: 5%">
+            <h3>More Information</h3>
+            <div class="container">
+              <h2>AQI Level Table</h2>
+              <table id = "data-tablex" style="margin-bottom: 25px;">
                 <tr>
                   <th>Category and Colour</th>
                   <th>Range</th>
@@ -171,6 +137,44 @@
                 </tr>
               </table>
             </div>
+            <div class="float-container">
+              <h2>Projected Air Quality Levels</h2>
+              <div class = "float-child">
+                <table id="data-table" style="margin-top: 25px;">
+                  <tr>
+                    <th>Destination AQ Information</th>
+                    <th>Today</th>
+                    <th>Next 7 Days</th>
+                  </tr>
+                  <tr>
+                    <td>Worst AQ Level</td>
+                    <td>Row 1, Cell 2</td>
+                    <td>Row 1, Cell 3</td>
+                  </tr>
+                  <tr>
+                    <td>Best AQ Level</td>
+                    <td>Row 2, Cell 2</td>
+                    <td>Row 2, Cell 3</td>
+                  </tr>
+                  </tr>
+                </table>
+              </div>  
+          </div>
+          <div class="container">
+            <div id="graph-type">
+              <label for="graph-dropdown">Graph types:</label>
+              <select id="graph-dropdown" onchange="onGraphChange()">
+                <option value="AQI">AQI</option>
+                <option value="Components">Components</option>
+              </select>
+            </div>
+            <div class = "container" style="margin-bottom: 425px;">
+              <div id="us-aqi-plot"></div>
+            </div>
+          </div> 
+          <div class = "container" style="margin-bottom: 50px;">
+            <p2>Main particulate matter: PM2.5 particles are small enough to enter the bloodstream, usually originating from wildfires, chimneys, bacteria, or small dust particles.</p2>
+          </div>
           </div>
         </div>
       </div>
