--- a/requirements.html
+++ b/requirements.html
@@ -53,7 +53,7 @@
         <div class="three column" style="margin-top: 5%">
           <h4>Group G's List of Requirements</h4>
           <b>Functional Requirements</b>
-          <p>
+          <p style = "padding: 5%;">
             The application will require to collect the user’s age and height to
             determine critical air pollution levels for the user. <br>
             The application will require user geolocation to provide the correct
@@ -68,7 +68,7 @@
             information provided on whether the location is safe. <br>
           </p>
           <b>Non-Functional Requirements</b>
-          <p>
+          <p style = "padding: 5%;">
             The application will colour code the map based on air pollution levels of the location. <br>
             The application will store user data securely. <br>
             The application will be compatible with the latest smartphones. <br>
