--- a/app.html
+++ b/app.html
@@ -60,14 +60,13 @@
         A web application that provides live and useful information about the
         air pollution in your location.
       </h6>
-      <!-- <h4 id="AQI">Air Quality Index: 0</h4>
-      <h4 id="Temperature">Temperature: 0</h4> -->
     </div>
     <div class="container">
       <div id="air-info"></div>
       <!-- Top left air quality  value-->
-      <div id="temp-div"></div>
+      <!-- <div id="temp-div"></div> -->
       <!-- Top left temprature value-->
+      <h4 style="margin-bottom: -5px;">Travel Information:</h4>
       <div id="route-info"></div>
       <!-- Top left distance duration value -->
       <div id="pre-existing-illnesses">
