--- a/app.html
+++ b/app.html
@@ -64,7 +64,7 @@
     <div class="container">
       <div id="air-info"></div>
       <!-- Top left air quality  value-->
-      <!-- <div id="temp-div"></div> -->
+      <div id="temp-div"></div>
       <!-- Top left temprature value-->
       <h4 style="margin-bottom: -5px;">Travel Information:</h4>
       <div id="route-info"></div>
