--- a/weekly.html
+++ b/weekly.html
@@ -50,6 +50,25 @@
     <!-- Primary Page Layout -->
     <div class="container">
 
+      <div class="row">
+        <div class = "three column" style="margin-top: 5%;">
+          <h4>Week 14</h4>
+          <b>July 12 2023:</b>
+          <p>
+            The team continued to work on their respective work. Some adjustments were made to the diagrams, as well
+            as the APIs on the website. Additional features were also discussed and implemented onto the website.
+            The team also discussed about the presentation and the final report.
+          </p>
+          <b>July 18 2023:</b>
+          <p>
+            The team met to discuss the remaining work that is supposed to be done.
+            The coders, Bili and Zhenyu, worked on fixing the bugs that were present on the website, including
+            styling and probelms with the Google Maps API, and some other minor issues with the JS script. The others
+            worked on the remaining diagrams as well as preparing for the presentation.
+          </p>
+        </div>
+      </div>
+
       <div class = "row">
         <div class = "three column" style = "margin-top: 5%">
           <h4>Week 13</h4>
