--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Boilerplate -->
     <meta charset="utf-8" />
-    <title>Group G - Application</title>
+    <title>StudeNet +R</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -49,7 +49,7 @@
 
     <div id="main">
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2630; Geopath Team - App</span
+        >&#x2630; Studnet +R + Food Truck x</span
       >
     </div>
 
